@@ -151,7 +151,35 @@ begin_import
 import|import
 name|jline
 operator|.
+name|Completor
+import|;
+end_import
+
+begin_import
+import|import
+name|jline
+operator|.
 name|ArgumentCompletor
+import|;
+end_import
+
+begin_import
+import|import
+name|jline
+operator|.
+name|ArgumentCompletor
+operator|.
+name|ArgumentDelimiter
+import|;
+end_import
+
+begin_import
+import|import
+name|jline
+operator|.
+name|ArgumentCompletor
+operator|.
+name|AbstractArgumentDelimiter
 import|;
 end_import
 
@@ -264,6 +292,42 @@ operator|.
 name|ql
 operator|.
 name|Driver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|parse
+operator|.
+name|ParseDriver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|exec
+operator|.
+name|FunctionRegistry
 import|;
 end_import
 
@@ -1864,6 +1928,297 @@ expr_stmt|;
 block|}
 specifier|public
 specifier|static
+name|Completor
+name|getCommandCompletor
+parameter_list|()
+block|{
+comment|// SimpleCompletor matches against a pre-defined wordlist
+comment|// We start with an empty wordlist and build it up
+name|SimpleCompletor
+name|sc
+init|=
+operator|new
+name|SimpleCompletor
+argument_list|(
+operator|new
+name|String
+index|[
+literal|0
+index|]
+argument_list|)
+decl_stmt|;
+comment|// We add Hive function names
+comment|// For functions that aren't infix operators, we add an open
+comment|// parenthesis at the end.
+for|for
+control|(
+name|String
+name|s
+range|:
+name|FunctionRegistry
+operator|.
+name|getFunctionNames
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|s
+operator|.
+name|matches
+argument_list|(
+literal|"[a-z_]+"
+argument_list|)
+condition|)
+block|{
+name|sc
+operator|.
+name|addCandidateString
+argument_list|(
+name|s
+operator|+
+literal|"("
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|sc
+operator|.
+name|addCandidateString
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// We add Hive keywords, including lower-cased versions
+for|for
+control|(
+name|String
+name|s
+range|:
+name|ParseDriver
+operator|.
+name|getKeywords
+argument_list|()
+control|)
+block|{
+name|sc
+operator|.
+name|addCandidateString
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+name|sc
+operator|.
+name|addCandidateString
+argument_list|(
+name|s
+operator|.
+name|toLowerCase
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Because we use parentheses in addition to whitespace
+comment|// as a keyword delimiter, we need to define a new ArgumentDelimiter
+comment|// that recognizes parenthesis as a delimiter.
+name|ArgumentDelimiter
+name|delim
+init|=
+operator|new
+name|AbstractArgumentDelimiter
+argument_list|()
+block|{
+specifier|public
+name|boolean
+name|isDelimiterChar
+parameter_list|(
+name|String
+name|buffer
+parameter_list|,
+name|int
+name|pos
+parameter_list|)
+block|{
+name|char
+name|c
+init|=
+name|buffer
+operator|.
+name|charAt
+argument_list|(
+name|pos
+argument_list|)
+decl_stmt|;
+return|return
+operator|(
+name|Character
+operator|.
+name|isWhitespace
+argument_list|(
+name|c
+argument_list|)
+operator|||
+name|c
+operator|==
+literal|'('
+operator|||
+name|c
+operator|==
+literal|')'
+operator|||
+name|c
+operator|==
+literal|'['
+operator|||
+name|c
+operator|==
+literal|']'
+operator|)
+return|;
+block|}
+block|}
+decl_stmt|;
+comment|// The ArgumentCompletor allows us to match multiple tokens
+comment|// in the same line.
+specifier|final
+name|ArgumentCompletor
+name|ac
+init|=
+operator|new
+name|ArgumentCompletor
+argument_list|(
+name|sc
+argument_list|,
+name|delim
+argument_list|)
+decl_stmt|;
+comment|// By default ArgumentCompletor is in "strict" mode meaning
+comment|// a token is only auto-completed if all prior tokens
+comment|// match. We don't want that since there are valid tokens
+comment|// that are not in our wordlist (eg. table and column names)
+name|ac
+operator|.
+name|setStrict
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// ArgumentCompletor always adds a space after a matched token.
+comment|// This is undesirable for function names because a space after
+comment|// the opening parenthesis is unnecessary (and uncommon) in Hive.
+comment|// We stack a custom Completor on top of our ArgumentCompletor
+comment|// to reverse this.
+name|Completor
+name|completor
+init|=
+operator|new
+name|Completor
+argument_list|()
+block|{
+specifier|public
+name|int
+name|complete
+parameter_list|(
+name|String
+name|buffer
+parameter_list|,
+name|int
+name|offset
+parameter_list|,
+name|List
+name|completions
+parameter_list|)
+block|{
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|comp
+init|=
+operator|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+operator|)
+name|completions
+decl_stmt|;
+name|int
+name|ret
+init|=
+name|ac
+operator|.
+name|complete
+argument_list|(
+name|buffer
+argument_list|,
+name|offset
+argument_list|,
+name|completions
+argument_list|)
+decl_stmt|;
+comment|// ConsoleReader will do the substitution if and only if there
+comment|// is exactly one valid completion, so we ignore other cases.
+if|if
+condition|(
+name|completions
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+condition|)
+block|{
+if|if
+condition|(
+name|comp
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|endsWith
+argument_list|(
+literal|"( "
+argument_list|)
+condition|)
+block|{
+name|comp
+operator|.
+name|set
+argument_list|(
+literal|0
+argument_list|,
+name|comp
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|ret
+return|;
+block|}
+block|}
+decl_stmt|;
+return|return
+name|completor
+return|;
+block|}
+specifier|public
+specifier|static
 name|void
 name|main
 parameter_list|(
@@ -2253,56 +2608,12 @@ literal|false
 argument_list|)
 expr_stmt|;
 comment|// reader.setDebug(new PrintWriter(new FileWriter("writer.debug", true)));
-name|List
-argument_list|<
-name|SimpleCompletor
-argument_list|>
-name|completors
-init|=
-operator|new
-name|LinkedList
-argument_list|<
-name|SimpleCompletor
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|completors
-operator|.
-name|add
-argument_list|(
-operator|new
-name|SimpleCompletor
-argument_list|(
-operator|new
-name|String
-index|[]
-block|{
-literal|"set"
-block|,
-literal|"from"
-block|,
-literal|"create"
-block|,
-literal|"load"
-block|,
-literal|"describe"
-block|,
-literal|"quit"
-block|,
-literal|"exit"
-block|}
-argument_list|)
-argument_list|)
-expr_stmt|;
 name|reader
 operator|.
 name|addCompletor
 argument_list|(
-operator|new
-name|ArgumentCompletor
-argument_list|(
-name|completors
-argument_list|)
+name|getCommandCompletor
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|String
