@@ -35,6 +35,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -1466,6 +1476,22 @@ argument_list|,
 literal|"^"
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+specifier|static
+name|Collection
+argument_list|<
+name|String
+argument_list|>
+name|getKeywords
+parameter_list|()
+block|{
+return|return
+name|xlateMap
+operator|.
+name|values
+argument_list|()
+return|;
 block|}
 specifier|private
 specifier|static
